added picture, linked javascript, added header

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/css">
 </head>
 <body>
+    <header>Welcome to my castle</header>
+    <img src="./images/castle.jpg" alt="">
     <h1>Anything</h1>
     <script src="/js"></script>
 </body>
