--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>Welcome to my castle</header>
     <img src="./images/castle.jpg" alt="">
-    <h1>Anything</h1>
+    <h1>Zareen Qualitest Atlanta Maldives</h1>
     <script src="/js"></script>
 </body>
 </html>
